# fabrication/skin/src/api/gen/models/V1CreateHostRequest.ts
@@ -52,6 +52,18 @@ export interface V1CreateHostRequest {
      * @memberof V1CreateHostRequest
      */
     resources?: V1ResourceLimits;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof V1CreateHostRequest
+     */
+    skills?: Array<string>;
+    /**
+     * 
+     * @type {Array<string>}
+     * @memberof V1CreateHostRequest
+     */
+    mcpServers?: Array<string>;
 }
 
 /**
@@ -75,6 +87,8 @@ export function V1CreateHostRequestFromJSONTyped(json: any, ignoreDiscriminator:
         'tools': json['tools'] == null ? undefined : json['tools'],
         'displayName': json['displayName'] == null ? undefined : json['displayName'],
         'resources': json['resources'] == null ? undefined : V1ResourceLimitsFromJSON(json['resources']),
+        'skills': json['skills'] == null ? undefined : json['skills'],
+        'mcpServers': json['mcpServers'] == null ? undefined : json['mcpServers'],
     };
 }
 
@@ -93,6 +107,8 @@ export function V1CreateHostRequestToJSONTyped(value?: V1CreateHostRequest | nul
         'tools': value['tools'],
         'displayName': value['displayName'],
         'resources': V1ResourceLimitsToJSON(value['resources']),
+        'skills': value['skills'],
+        'mcpServers': value['mcpServers'],
     };
 }
 
